# hf-llm-chat

./: Cargo.toml  README.md  models.toml
src/: config.rs  lib.rs  pipe.rs
src/model/: config.rs  hub.rs  mod.rs  registry.rs
src/models/: config.rs  mod.rs  q_llama.rs  q_qwen2.rs  q_qwen3.rs  registry.rs
src/tests/: mod.rs  quant.rs  qwen2.rs
src/utils/: chat.rs  load.rs  mod.rs  proxy.rs
